ovim/tests/snapshots/unicode_edge_cases_test__long_emoji_sequence.snap
---
source: ovim/tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:49
Lines: 1

Buffer:
😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀😀[😀]
