ovim/tests/snapshots/unicode_edge_cases_test__visual_select_emoji.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 0:8
Lines: 1

Buffer:
test 😀😁😂[ ]end
