ovim/tests/snapshots/unicode_edge_cases_test__visual_select_unicode.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 0:8
Lines: 1

Buffer:
hello 世界[ ]test
